add images, fix bug and add favicon

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="images/favicon.png">
 
     <title>Landing</title>
 
@@ -73,9 +72,8 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-12">
-                <div class="image-overflow">
-                    <img src="images/puzzle.png" class="" alt="puzzle"/>
-                </div>
+                <img src="images/puzzle.png" class="img-fluid puzzle-d" alt="puzzle"/>
+                <img src="images/puzzle_mobile.png" class="img-fluid puzzle-m" alt="puzzle"/>
             </div>
         </div>
     </div>
