--- a/app/index.html
+++ b/app/index.html
@@ -396,7 +396,7 @@
                     <div class="reviews-item__person">
                         <div class="userpic bg" style="background-image: url('images/2.png')"></div>
                         <div class="info">
-                            <div class="name">Александра Данилова</div><a href="#" class="link link-vk"></a>
+                            <div class="name">Александра Данилова</div><a href="#" class="link link-vk"><img src="images/vk.svg"/></a>
                             <div class="state">г. Санкт-Петербург</div>
                         </div>
                     </div>
@@ -423,7 +423,7 @@
                     <div class="reviews-item__person">
                         <div class="userpic bg" style="background-image: url('images/2.png')"></div>
                         <div class="info">
-                            <div class="name">Александра Данилова</div><a href="#" class="link link-vk"></a>
+                            <div class="name">Александра Данилова</div><a href="#" class="link link-vk"><img src="images/vk.svg"/></a>
                             <div class="state">г. Санкт-Петербург</div>
                         </div>
                     </div>
