--- a/app/index.html
+++ b/app/index.html
@@ -233,7 +233,7 @@
                                 </p>
                             </div>
                             <div class="tabs_content__col col-right">
-                                <img src="images/1.png"/>
+                                <img src="images/pic1.jpg"/>
                             </div>
                         </div>
                         <div id="format2">
@@ -252,7 +252,7 @@
                                 </p>
                             </div>
                             <div class="tabs_content__col col-right">
-                                <img src="images/2.png"/>
+                                <img src="images/pic2.jpg"/>
                             </div>
                         </div>
                         <div id="format3">
@@ -270,7 +270,7 @@
                                 </p>
                             </div>
                             <div class="tabs_content__col col-right">
-                                <img src="images/3.png"/>
+                                <img src="images/pic3.jpg"/>
                             </div>
                         </div>
                     </div>
@@ -408,10 +408,10 @@
             <div class="col-12 offset-md-1 col-md-10">
                 <div class="reviews-item">
                     <div class="reviews-item__person">
-                        <div class="userpic bg" style="background-image: url('images/person1.jpg')"></div>
+                        <div class="userpic bg" style="background-image: url('images/video1.jpg')"></div>
                         <div class="info">
-                            <div class="name">Татьяна Алексеева</div><a href="#" class="link link-vk"><img src="images/vk.svg"/></a>
-                            <div class="state">г. Санкт-Петербург</div>
+                            <div class="name">Расима</div><a href="https://vk.com/deti_ola" target="_blank" class="link link-vk"><img src="images/vk.svg"/></a>
+                            <div class="state">г. Йошкар-Ола</div>
                         </div>
                     </div>
                     <div class="reviews-item__container">
@@ -432,7 +432,7 @@
                             в соц.сетях. Все мамочки с удовольствием будут рекомендовать Вас друзьям
                             и родственникам.</p>
                         <div class="color-green">Главное — не бойтесь начинать!</div>
-                        <a href="https://www.youtube.com/watch?v=YBNrC8OpBAo" target="_blank" class="video"><img src="images/2.png"/></a>
+                        <div class="video video1"><img src="images/video1.jpg"/></div>
                     </div>
                 </div>
             </div>
@@ -444,8 +444,8 @@
                     <div class="reviews-item__person">
                         <div class="userpic bg" style="background-image: url('images/person2.jpg')"></div>
                         <div class="info">
-                            <div class="name">Александра Данилова</div><a href="#" class="link link-vk"><img src="images/vk.svg"/></a>
-                            <div class="state">г. Санкт-Петербург</div>
+                            <div class="name">Алена Маркина</div><a target="_blank" href="https://vk.com/meqastroi" class="link link-vk"><img src="images/vk.svg"/></a>
+                            <div class="state">г. Ижевск</div>
                         </div>
                     </div>
                     <div class="reviews-item__container">
@@ -459,7 +459,7 @@
                             персоналу вы отобьете с первого месяца. Окупитесь через 3 - 4 месяца. Доход зависит от
                             проходимости ТЦ, в среднем ежедневная выручка 10 000 рублей.</p>
                         <div class="color-green">Подумайте и начинайте двигаться в желаемом направлении!</div>
-                        <a href="https://www.youtube.com/watch?v=rtbcUVC5zk4" target="_blank" class="video"><img src="images/2.png"/></a>
+                        <div class="video video2"><img src="images/video2.jpg"/></div>
                     </div>
                 </div>
             </div>
