--- a/app/index.html
+++ b/app/index.html
@@ -472,33 +472,40 @@
         <div class="row">
             <div class="col-12 col-md-12">
                 <img class="pos-a item-parallax__3 rellax" src="images/rocket-2.png" data-rellax-speed="1.5" data-rellax-percentage="-0.5">
-                <h2 class="article color-white">Заинтересовались?</h2>
-                <p class="text">Отправьте заявку или просто позвоните<br/> по телефону: +7 499 375-02-88</p>
-                <div class="modal-form">
-                    <div class="modal-form__box text-left">
-                        <input type="text" class="modal-input" value=""/>
-                        <label class="modal-label">Введите имя</label>
-                        <div class="bar"></div>
-                    </div>
-                    <div class="modal-form__box text-left">
-                        <input type="tel" name="tel" class="modal-input" value=""/>
-                        <label class="modal-label">Введите телефон</label>
-                        <div class="bar"></div>
-                    </div>
-                    <div class="modal-form__box text-left">
-                        <input type="email" class="modal-input" value=""/>
-                        <label class="modal-label">Введите E-mail</label>
-                        <div class="bar"></div>
-                    </div>
-                    <label class="checkbox-private">
-                        <input class="checkbox-private_checkbox-old checkbox_info checked" type="checkbox" id="checkbox" checked="checked">
-                        <span class="checkbox-private_checkbox-new"></span>
-                        <div class="checkbox-private_checkbox-royal">
-                            Согласен на обработку <a target="_blank" href="#">персональных данных</a>
+                <form method="post" class="form signup">
+                    <input name="source" value="88" type="hidden">
+                    <input name="form_id" value="landing_88" type="hidden">
+                    <input name="zagolovok" value="Франшиза Мегастрой (megastroy.club)" type="hidden">
+                    <input name="form_subject" value="Оставляйте заявку и мы ответим" type="hidden">
+
+                    <h2 class="article color-white">Заинтересовались?</h2>
+                    <p class="text">Отправьте заявку или просто позвоните<br/> по телефону: +7 499 375-02-88</p>
+                    <div class="modal-form">
+                        <div class="modal-form__box text-left">
+                            <input type="text" class="modal-input" value=""/>
+                            <label class="modal-label">Введите имя</label>
+                            <div class="bar"></div>
                         </div>
-                    </label>
-                </div>
-                <button type="submit" class="btn btn-yellow">Отправить заявку</button>
+                        <div class="modal-form__box text-left">
+                            <input type="tel" name="tel" class="modal-input" value=""/>
+                            <label class="modal-label">Введите телефон</label>
+                            <div class="bar"></div>
+                        </div>
+                        <div class="modal-form__box text-left">
+                            <input type="email" class="modal-input" value=""/>
+                            <label class="modal-label">Введите E-mail</label>
+                            <div class="bar"></div>
+                        </div>
+                        <label class="checkbox-private">
+                            <input class="checkbox-private_checkbox-old checkbox_info checked" type="checkbox" checked="checked">
+                            <span class="checkbox-private_checkbox-new"></span>
+                            <div class="checkbox-private_checkbox-royal">
+                                Согласен на обработку <a target="_blank" href="#">персональных данных</a>
+                            </div>
+                        </label>
+                    </div>
+                    <button type="submit" class="btn btn-yellow">Отправить заявку</button>
+                </form>
             </div>
         </div>
     </div>
@@ -507,34 +514,41 @@
 <div class="modal modal-container-window fade" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            <div class="close-modal-btn"><img src="images/close.svg"/></div>
-            <h2 class="article color-white">Заинтересовались?</h2>
-            <p class="text">Отправьте заявку или просто позвоните<br/> по телефону: +7 499 375-02-88</p>
-            <div class="modal-form">
-                <div class="modal-form__box text-left">
-                    <input type="text" class="modal-input" value=""/>
-                    <label class="modal-label">Введите имя</label>
-                    <div class="bar"></div>
-                </div>
-                <div class="modal-form__box text-left">
-                    <input type="tel" name="tel" class="modal-input" value=""/>
-                    <label class="modal-label">Введите телефон</label>
-                    <div class="bar"></div>
-                </div>
-                <div class="modal-form__box text-left">
-                    <input type="email" class="modal-input" value=""/>
-                    <label class="modal-label">Введите E-mail</label>
-                    <div class="bar"></div>
-                </div>
-                <label class="checkbox-private">
-                    <input class="checkbox-private_checkbox-old checkbox_info checked" type="checkbox" id="checkbox" checked="checked">
-                    <span class="checkbox-private_checkbox-new"></span>
-                    <div class="checkbox-private_checkbox-royal">
-                        Согласен на обработку <a target="_blank" href="#">персональных данных</a>
+            <form method="post" class="form signup">
+                <input name="source" value="88" type="hidden">
+                <input name="form_id" value="landing_88" type="hidden">
+                <input name="zagolovok" value="Франшиза Мегастрой (megastroy.club)" type="hidden">
+                <input name="form_subject" value="Оставляйте заявку и мы ответим" type="hidden">
+
+                <div class="close-modal-btn"><img src="images/close.svg"/></div>
+                <h2 class="article color-white">Заинтересовались?</h2>
+                <p class="text">Отправьте заявку или просто позвоните<br/> по телефону: +7 499 375-02-88</p>
+                <div class="modal-form">
+                    <div class="modal-form__box text-left">
+                        <input type="text" name="firstName" class="modal-input" value=""/>
+                        <label class="modal-label">Введите имя</label>
+                        <div class="bar"></div>
                     </div>
-                </label>
-            </div>
-            <button type="submit" class="btn btn-yellow">Отправить заявку</button>
+                    <div class="modal-form__box text-left">
+                        <input type="tel" name="phone" class="modal-input" value=""/>
+                        <label class="modal-label">Введите телефон</label>
+                        <div class="bar"></div>
+                    </div>
+                    <div class="modal-form__box text-left">
+                        <input type="email" name="email" class="modal-input" value=""/>
+                        <label class="modal-label">Введите E-mail</label>
+                        <div class="bar"></div>
+                    </div>
+                    <label class="checkbox-private">
+                        <input class="checkbox-private_checkbox-old checkbox_info checked" type="checkbox" checked="checked">
+                        <span class="checkbox-private_checkbox-new"></span>
+                        <div class="checkbox-private_checkbox-royal">
+                            Согласен на обработку <a target="_blank" href="#">персональных данных</a>
+                        </div>
+                    </label>
+                </div>
+                <button type="submit" class="btn btn-yellow">Отправить заявку</button>
+            </form>
         </div>
     </div>
 </div>
